--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "fs-extra": "^11.2.0"
+  },
+  "devDependencies": {
+    "terser": "^5.32.0",
+    "uglify-js": "^3.19.3"
   }
 }
